<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <ImageView
                android:id="@+id/lo"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/alex_brush"
                android:text="@string/slogan"
                android:textColor="#2e2e2e"
                android:textSize="24sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLogim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/email" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_mail"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLogim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:hint="@string/password" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="50dp"
                android:background="@color/mapboxBlue"
                android:text="@string/login"
                android:textColor="@color/white"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/forgot"
                    android:layout_marginTop="20dp"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/register"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</RelativeLayout>