...
    //Profile || Login || Register || Log Out
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="logout">LogOut</string>
    <string name="reset">Reset Password</string>
    <string name="title_activity_profile_update">ProfileUpdate</string>
...
